frontend/src/ConfirmationCodePage.scss
.ccp {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 600px;
}

.ccp-input {
  height: 40px;
  width: 40px;
  border-radius: 5px;
  border: 1px solid grey;
  margin-right: 10px;
  text-align: center;
}

.ccp-input:focus-visible {
  outline: none;
  box-shadow: 1px 1px 1px grey inset;
}

.ccp-actions {
  display: flex;
  justify-content: center;
  margin-top: 0.5rem;
}

